--- a/main.html
+++ b/main.html
@@ -1,14 +1,15 @@
-@@ -0,0 +1,47 @@
 <!DOCTYPE html>
 <html lang="ja-JP">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>江縫栄市立総合病院</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
   </head>
   <body>
     <header>
@@ -23,8 +24,8 @@
       <div class="nav">
         <ul>
           <li><a href="#">紹介</a></li>
-          <li><a href="#">利用規約</a></li>
-          <li><a href="#">図書館</a></li>
+          <li><a href="https://hospinfo-enuei-city.org/guideline">利用規約</a></li>
+          <li><a href="https://hospinfo-enuei-city.org/utamihon">図書館</a></li>
           <li><a href="#">関連情報</a></li>
           <li><a href="#">連絡所</a></li>
           <li><a href="#">お問い合わせ</a></li>
