--- a/IrrtumderWelt.html
+++ b/IrrtumderWelt.html
@@ -67,6 +67,13 @@
 　「保存対象」はどの宇宙が滅んでも、どの時間が消えても、<br>
 　絶対に"無かったこと"にはならない。<br>
 <br>
+・学的概念としての「0」が消滅し、すべての計算・論理が崩壊。<br>
+・すべての記録、データベースの「空白」が埋め尽くされ、情報が飽和。<br>
+・言語の「間」、楽譜の「休符」、意識の「無意識領域」すら破壊。<br>
+・因果律の崩壊を確認。物理法則の維持が不可能。<br>
+　これにより、宇宙は指数関数的な崩壊を開始。<br>
+<br>
+<br>
 --------------------------------------------------------------------------------<br>
 <br>
 報告書　終わり<br>
