--- a/IrrtumderWelt.html
+++ b/IrrtumderWelt.html
@@ -47,13 +47,14 @@
 　その結果、最後に残るのは、「すべてが詰め込まれ、破裂し、崩壊した世界」。<br>
 <br>
 ・最悪の結末<br>
-　世界は情報と記録の混乱で秩序を失い、あらゆる管理体制が破壊された。<br>
+　世界は情報と記録の混乱で秩序を失い、あらゆる管理体制が破壊される。<br>
 　宇宙はエントロピーの暴走により、加速度的に終焉へと向かう。<br>
 <br>
 これが、005の力が引き起こす可能性のある「最悪のエンド」。<br>
+	<br>
 --------------------------------------------------------------------------------<br>
 <br>
-・005の力の本質<br>
+・005の本質<br>
 <br>
 物理的な破壊は起こさないが、概念的な影響が極めて強い。<br>
 　「空白」の概念が意志を持するため、記録・情報・数値・秩序といった<br>
