--- a/IrrtumderWelt.html
+++ b/IrrtumderWelt.html
@@ -81,3 +81,126 @@
 ================================================================================<br>
 　　　　　　　　　　　　　 ██県██市██████　█████████████<br>
 ================================================================================<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+--------------------------------------------------------------------------------<br>
+また、「空白の概念」であっても、<br>
+完全にその性質や力を理解しているわけではないというのは面白い。<br>
+自己認識が浅い状態でその力を持っているから、<br>
+今後の展開で気づいていくことが多くなるだろうし、<br>
+それが物語を進める動力になりそうだ。<br>
+<br>
+	　　　　　　　　　　　　　　　　　　　　　　　　　閾ｪ遘ｰ蛛丞ｱ井ｽ懷ｮｶ<br>
+--------------------------------------------------------------------------------<br>
+<br>
+--------------------------------------------------------------------------------<br>
+根本的な「孤独」からは逃げられない。こればかりはどうしようもないね。<br>
+どんなに周囲に溶け込もうとしても、<br>
+やっぱり内面的にはひとりであることに変わりない。<br>
+それに気づいている事が一番寂しい部分。<br>
+全ての情報を持ち合わせていても、それを直接的に使えないのは<br>
+無力感やもどかしさを感じさせるだろう。<br>
+<br>
+	　　　　　　　　　　　　　　　　　　　　　　　　隨ｬ荵昴?繧ｻ繝輔ぅ繝ｩ<br>
+--------------------------------------------------------------------------------<br>
+<br>
+<br>
+<br>
+<br>
+--------------------------------------------------------------------------------<br>
+<br>
+・アカシックレコードを持つことで全ての記録を持っているとしても、<br>
+それを適した世界の者に伝えることはできない。<br>
+有用な情報を活用すること自体がほぼ不可能。<br>
+<br>
+・「空白の概念」そのものであれど、空白とは何かが全部解ってるわけじゃない。<br>
+実際自身の能力の危険さについて認識できたのはつい昨日のこと。<br>
+というか、全然使おうともしてなかった。ただ存在しない存在に過ぎなかった。<br>
+<br>
+・どの世界だって「視る」ことはできても、物理的な影響を与えるのは不可能。<br>
+<br>
+<br>
+仮に「数分後に隕石が飛んできて滅びる予定にある地球がある宇宙」を<br>
+見ているとしましょう。でも、<br>
+数分に隕石が降るという事実をその世界の者に言うことはできないし、<br>
+直接飛んで来る隕石を止めることもできない。<br>
+そうやって、数分後に滅ぼされる世界を「見ているしかない」ということね。<br>
+<br>
+直接的な影響範囲が「この街」に限定されているという、<br>
+物理的な影響が与えられないという制約は、そうね。<br>
+確かに、無敵というわけではないわ。<br>
+<br>
+　　　　　　　　繧ｳ繧ｯ繝槭??医Λ繝?ぅ繧ｨ繝ｫ??まとめと繝薙リ繝ｼの意見<br>
+--------------------------------------------------------------------------------<br>
