--- a/IrrtumderWelt.html
+++ b/IrrtumderWelt.html
@@ -4,10 +4,10 @@
 </head>
 <body style="font-family: monospace;">
 ================================================================================<br>
-観察報告　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 2025年2月10日<br>
+観察報告　　　　　　　　　　　　　　　　　　　　　　　　　　　　　  2025年2月8日<br>
 ================================================================================<br>
 <br>
-・外峯零（005）の影響範囲の再評価<br>
+・外峯零（Null）の影響範囲の再評価<br>
 <br>
 　数値破壊による文明崩壊<br>
 　　0が消滅すれば、数学・物理・プログラム・貨幣制度すら維持不能になる。<br>
@@ -39,7 +39,7 @@
 　空白の概念が欠落したことで、地球上の人々は「忘却」状態に陥る。<br>
 　ただし、何を忘れたのかは誰にも分からない。<br>
 <br>
-・宇宙の熱的死（エントロピーの暴走）<br>
+・宇宙の熱的死（＝エントロピーの暴走）<br>
 　"満ちすぎた世界"が限界を迎える。<br>
 　空白が消え、情報が限界を超えて積み重なり続けることで、<br>
 　宇宙そのもののバランスが崩壊し、エントロピーの暴走が始まる。<br>
@@ -50,11 +50,11 @@
 　世界は情報と記録の混乱で秩序を失い、あらゆる管理体制が破壊される。<br>
 　宇宙はエントロピーの暴走により、加速度的に終焉へと向かう。<br>
 <br>
-これが、005の力が引き起こす可能性のある「最悪のエンド」。<br>
+これが、Nullが引き起こす可能性のある「最悪の終焉」。<br>
 	<br>
 --------------------------------------------------------------------------------<br>
 <br>
-・005の本質<br>
+・Nullの本質<br>
 <br>
 物理的な破壊は起こさないが、概念的な影響が極めて強い。<br>
 　「空白」の概念が意志を持するため、記録・情報・数値・秩序といった<br>
@@ -64,7 +64,7 @@
 　「概念としての空白」であると同時に、「情報そのもの」でもある。<br>
 <br>
 アカシックレコードを持つ＝「すべての情報がそこにある」<br>
-　つまり、005が何かを「保存する」と決めれば、<br>
+　つまり、Nullが何かを「保存する」と決めれば、<br>
 　「保存対象」はどの宇宙が滅んでも、どの時間が消えても、<br>
 　絶対に"無かったこと"にはならない。<br>
 <br>
@@ -73,13 +73,16 @@
 ・言語の「間」、楽譜の「休符」、意識の「無意識領域」すら破壊。<br>
 ・因果律の崩壊を確認。物理法則の維持が不可能。<br>
 　これにより、宇宙は指数関数的な崩壊を開始。<br>
+--------------------------------------------------------------------------------<br>
+判断　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　要保護・注視<br>
+--------------------------------------------------------------------------------<br>
 <br>
 <br>
 --------------------------------------------------------------------------------<br>
 <br>
 報告書　終わり<br>
 ================================================================================<br>
-　　　　　　　　　　　　　 ██県██市██████　█████████████<br>
+　　　　　　　　　　　　　  ██県██市██████　█████████████<br>
 ================================================================================<br>
 <br>
 <br>
@@ -156,24 +159,25 @@
 <br>
 <br>
 --------------------------------------------------------------------------------<br>
-また、「空白の概念」であっても、<br>
+また、本個体が「空白の概念」であっても、<br>
 完全にその性質や力を理解しているわけではないというのは面白い。<br>
 自己認識が浅い状態でその力を持っているから、<br>
-今後の展開で気づいていくことが多くなるだろうし、<br>
-それが物語を進める動力になりそうだ。<br>
+今後の展開で自分について気づいていくことが多くなるだろうし、<br>
+それが物語を進める「動力」になりそうだ。<br>
 <br>
-	　　　　　　　　　　　　　　　　　　　　　　　　 　　　　　　閾ｪ遘ｰ蛛丞ｱ井ｽ懷ｮｶ<br>
+	　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　閾ｪ遘ｰ蛛丞ｱ井ｽ懷ｮｶ<br>
 --------------------------------------------------------------------------------<br>
+<br>
 <br>
 --------------------------------------------------------------------------------<br>
 根本的な「孤独」からは逃げられない。こればかりはどうしようもないね。<br>
-どんなに周囲に溶け込もうとしても、<br>
+この子がどんなに周囲に溶け込もうとしても、<br>
 やっぱり内面的にはひとりであることに変わりない。<br>
-それに気づいている事が一番寂しい部分。<br>
-全ての情報を持ち合わせていても、それを直接的に使えないのは<br>
-無力感やもどかしさを感じさせるだろう。<br>
+ただこの子自身、その事に気づいているのが一番「寂しい」部分かな。<br>
+全ての情報を持ち合わせていても、それを直接的に使えないとなると<br>
+無力感やもどかしさしか残ってなさそうだね。<br>
 <br>
-	　　　　　　　　　　　　　　　　　　　　　　　　　 　　　　隨ｬ荵昴?繧ｻ繝輔ぅ繝ｩ<br>
+	　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　隨ｬ荵昴?繧ｻ繝輔ぅ繝ｩ<br>
 --------------------------------------------------------------------------------<br>
 <br>
 <br>
@@ -192,14 +196,14 @@
 ・どの世界だって「視る」ことはできても、物理的な影響を与えるのは不可能。<br>
 <br>
 <br>
-仮に「数分後に隕石が飛んできて滅びる予定にある地球がある宇宙」を<br>
+仮に当個体が「数分後に隕石が飛んできて滅びる予定にある地球がある宇宙」を<br>
 見ているとしましょう。でも、<br>
 数分に隕石が降るという事実をその世界の者に言うことはできないし、<br>
 直接飛んで来る隕石を止めることもできない。<br>
 そうやって、数分後に滅ぼされる世界を「見ているしかない」ということね。<br>
 <br>
 直接的な影響範囲が「この街」に限定されているという、<br>
-物理的な影響が与えられないという制約は、そうね。<br>
+物理影響が与えられないという制約は、そうね。<br>
 確かに、無敵というわけではないわ。<br>
 <br>
 　　　　　　　　　　　　　　繧ｳ繧ｯ繝槭??医Λ繝?ぅ繧ｨ繝ｫ??まとめと繝薙リ繝ｼの意見<br>
