--- a/worstdemise.html
+++ b/worstdemise.html
@@ -11,7 +11,7 @@ OBSERVATION REPORT                                              February 8, 2025
 ・Reevaluation of the Influence Range of Model No.005 (Gaine Null)
                                                                                 
 　1. Civilization Collapse Due to Numerical Destruction
-　　If 0 disappears, maintaining mathematics, physics, programming, 
+　　If "0" disappears, maintaining mathematics, physics, programming, 
 　　and even the monetary system becomes impossible.
 　　The economy will suffer instant death, financial markets will collapse, 
 　　and all digital devices, including computers, will cease to function.
@@ -44,26 +44,27 @@ OBSERVATION REPORT                                              February 8, 2025
 
 Simulation of the "Worst Demise"
 
-・The financial markets, national governance structures, and infrastructure will all fail,
-plunging the world into chaos.
-Governments and organizations worldwide will lose control over record management,
-causing an explosive spread of confusion.
-With the loss of the "blank," people on Earth will fall into a state of "forgetfulness"
-However, no one will know what they have forgotten.
+・The financial markets, national governance structures, and infrastructure 
+Everything fail, plunging the world into chaos.
+Governments and organizations worldwide will lose control
+over record management, causing an explosive spread of confusion.
+With the loss of the "blank", people on Earth will fall into a state of
+"forgetfulness" However, no one will know what they have forgotten.
 
 ・The Heat Death of the Universe (Runaway Entropy)
 The "overfilled world" reaches its limit high speed.
-With blank spaces erased and information continuing to accumulate beyond its limits,
+With "blank" erased and information continuing to accumulate beyond its limits,
 the very balance of the universe collapses, triggering entropy overload.
 Not a single point, the Entire universe will self-destruct due to
 information oversaturation.
-In the end, what remains is a world where "everything has been crammed in, 
-burst apart, and collapsed."
+In the end, what remains is a world where 
+     "everything has been crammed in, burst apart, and collapsed."
 
 ・The Worst Conclusion
 The world will lose order due to the confusion of information and records,
 leading to the destruction of all systems of control.
-The universe will accelerate toward its end due to the uncontrolled surge in entropy.
+The universe will accelerate toward its demise
+due to the uncontrolled surge in entropy.
 This is the "Worst Demise" that Gaine Null could potentially bring about.
 
 --------------------------------------------------------------------------------
@@ -83,14 +84,17 @@ Have the Akashic Records = "All information exists there."
 In other words, if Null decides to "preserve" something,
 the preserved object will never be erased, no matter which universe perishes 
 or which timeline disappears.
-The academic concept of "0" vanishes, leading to the collapse of all calculations and logic.
+The academic concept of "0" vanishes,
+leading to the collapse of all calculations and logic.
 
-All records and databases become completely filled, leading to information saturation.
+All records and databases become completely filled,
+leading to information saturation.
 
-The "pauses" in language, "rests" in music scores, and even "the unconscious regions" 
-of the mind are destroyed.
+The "pauses" in language, "rests" in music scores, 
+and even "the unconscious regions" of the mind are destroyed.
 
-The collapse of causality is confirmed, making the maintenance of physical laws impossible.
+The collapse of causality is confirmed,
+making the maintenance of physical laws impossible.
 
 The universe begins an exponential collapse.
 --------------------------------------------------------------------------------
@@ -188,6 +192,7 @@ Since it possesses this power while having shallow self-awareness,
 it will likely have many realizations about itself as the story progresses.
 That seems to become the "driving force" that moves the story forward.
 
+	
 　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　閾ｪ遘ｰ蛛丞ｱ井ｽ懷ｮｶ
 --------------------------------------------------------------------------------
 There is no escape from the fundamental "loneliness". 
@@ -200,6 +205,7 @@ However, I think the most desolate part is that she knows that herself already.
 Even if he has all the information, if she cannot use it directly,
 Well, all that remains is helplessness and frustration. Isn't it?
 
+	
 　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　隨ｬ荵昴?繧ｻ繝輔ぅ繝ｩ
 --------------------------------------------------------------------------------
 Even though they have the Akashic Records and possess all records,
@@ -219,7 +225,7 @@ e.g., suppose they are observing a universe where-
 "Earth is destined to be destroyed by a meteorite in a few minutes".
 Even if they saw all of it, they cannot inform the people of that world,
 nor can they stop the meteor from striking. Of course.
-All they can do is only "observe" the world will be destroyed within minutes.
+All they can do is only "watch" the world will be destroyed within minutes.
 
 This restriction, where their direct influence is limited to this "city",
 and their inability to physically affect the world,
