--- a/worstdemise.html
+++ b/worstdemise.html
@@ -42,16 +42,16 @@ OBSERVATION REPORT                                              February 8, 2025
 --------------------------------------------------------------------------------
 --------------------------------------------------------------------------------
 
-Simulation of the "Worst Demise"
+・Simulation of the "Worst Demise"
 
-・The financial markets, national governance structures, and infrastructure 
+The financial markets, national governance structures, and infrastructure 
 Everything fail, plunging the world into chaos.
 Governments and organizations worldwide will lose control
 over record management, causing an explosive spread of confusion.
 With the loss of the "blank", people on Earth will fall into a state of
 "forgetfulness" However, no one will know what they have forgotten.
 
-・The Heat Death of the Universe (Runaway Entropy)
+The Heat Death of the Universe (Runaway Entropy):
 The "overfilled world" reaches its limit high speed.
 With "blank" erased and information continuing to accumulate beyond its limits,
 the very balance of the universe collapses, triggering entropy overload.
@@ -60,7 +60,7 @@ information oversaturation.
 In the end, what remains is a world where 
      "everything has been crammed in, burst apart, and collapsed."
 
-・The Worst Conclusion
+The Worst Conclusion:
 The world will lose order due to the confusion of information and records,
 leading to the destruction of all systems of control.
 The universe will accelerate toward its demise
@@ -109,7 +109,7 @@ DIAGNOSIS                                    Observation and Protection required
 
 END OF REPORT
 ================================================================================
-                                                 ██████　█████████████, ██, ████
+                              ██████　█████████████, ██, ████
 ================================================================================
 
 
