--- a/irrtumderwelt.html
+++ b/irrtumderwelt.html
@@ -156,7 +156,7 @@
 <br>
 <br>
 <br>
-<a href="https://hospinfo-enuei-city.org/irrtumderwelt-k">KO</a><br> <a href="https://hospinfo-enuei-city.org/irrtumderwelt-e">KO</a><br>
+<a href="https://hospinfo-enuei-city.org/irrtumderwelt-k">KO</a><br> <a href="https://hospinfo-enuei-city.org/irrtumderwelt-e">EN</a><br>
 --------------------------------------------------------------------------------<br>
 また、本個体が「空白の概念」であっても、<br>
 完全にその性質や力を理解しているわけではないというのは面白い。<br>
