--- a/irrtumderwelt-e.html
+++ b/irrtumderwelt-e.html
@@ -184,7 +184,8 @@ END OF REPORT
 
 
 
-<a href="https://hospinfo-enuei-city.org/irrtumderwelt">JP</a><br> <a href="https://hospinfo-enuei-city.org/irrtumderwelt-k">KO</a><br>
+<a href="https://hospinfo-enuei-city.org/irrtumderwelt">JP</a>
+<a href="https://hospinfo-enuei-city.org/irrtumderwelt-k">KO</a>
 --------------------------------------------------------------------------------
 It's also interesting that even though this entity is the "concept of blank", 
 It does not fully understand its nature or power, which is intriguing.
