--- a/utamihon.html
+++ b/utamihon.html
@@ -25,6 +25,7 @@ $(this).next(".body-content").toggle();});
 <h2>利用方法</h2><br/>
 当ページは<b>外峯零</b>の歌ライブラリーです。<br/>
 URLは既に音源化できているものですので、<span style="color: #e95464">リンクを右クリック→「新しいタブで開く」</span>でご自由に聴けます。<br/>
+検索は<span style="color: #e95464">ctrl+F</span><br/>
 歌枠の際知らない曲が来てもアレなので、配信中はこのリスト内の曲を申し込んでくださると幸いです。<br/>
 うろ覚え・応えられないはご愛嬌で……<br/>
 <br/>
@@ -44,6 +45,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <div class="body-content">
 <h3>あ</h3><br/>
 アイアルの勘違い<br/>
+<a href="https://www.youtube.com/watch?v=JPNG9925W8E">あいのうた<br/></a>
 <a href="https://www.youtube.com/watch?v=2Vxw7qMMRrw">愛言葉Ⅱ<br/></a>
 <a href="https://www.youtube.com/watch?v=uiN5bmMlE0s">愛言葉Ⅲ<br/></a>
 <a href="https://www.youtube.com/watch?v=Fnw7LaOpEvY">愛されなくても君がいる</a><br/>
@@ -82,7 +84,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 雨夢楼<br/>
 <a href="https://www.youtube.com/watch?v=zcpRhjsxAnY">雨とペトラ</a><br/>
 アヤノの幸福理論<br/>
-アルビノ<br/>
+<a href="https://www.youtube.com/watch?v=VQrh1qMvUHA">アルビノ</a><br/>
 アンチビート<br/>
 アンデッドエネミー<br/>
 <a href="https://www.youtube.com/watch?v=OB7XJIQC3hM">アンドロイドガール</a><br/>
@@ -151,7 +153,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <a href="https://www.youtube.com/watch?v=7niMaCRDhns">音偽バナシ</a><br/>
 <a href="https://www.youtube.com/watch?v=w_Kfz4jHypQ">乙女解剖</a><br/>
 踊<br/>
-踊りゃんせ<br/>
+<a href="https://www.youtube.com/watch?v=Mves75Jbtog">踊りゃんせ</a><br/>
 <a href="https://www.youtube.com/watch?v=FB1CYbSvE4w">お勉強しといてよ</a><br/>
 <a href="https://www.youtube.com/watch?v=v8uPWJ_KxNk">オルターエゴ</a><br/>
 オレンジ<br/>
@@ -221,7 +223,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
         <br/>
         <br/>
 <h3>け</h3><br/>
-携帯恋話<br/>
+<a href="https://www.youtube.com/watch?v=7KDwsvxSyRE">携帯恋話</a><br/>
 <a href="https://www.youtube.com/watch?v=2Mavh0qKPFY">劇場愛歌</a><br/>
 <a href="https://www.youtube.com/watch?v=7oF7lzHYNOY">下剋上</a><br/>
 下剋上（完）<br/>
@@ -234,7 +236,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 ゴーストルール<br/>
 <a href="https://www.youtube.com/watch?v=_ePdFHY9IHg">ゴー・トゥ・大都会</a><br/>
 極彩色<br/>
-ココロ<br/>
+<a href="https://www.youtube.com/watch?v=azXZs3FYMOg">ココロ<br/>
 心做し<br/>
 心よ原始に戻れ<br/>
 <a href="https://www.youtube.com/watch?v=BqD8pdoqJKU">古書屋敷殺人事件</a><br/>
@@ -260,7 +262,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <a href="https://soundcloud.com/not-sotomine/silent-majority">サイレントマジョリティー</a><br/>
 桜ノ雨<br/>
 サマータイムレコード<br/>
-<a href="https://www.youtube.com/watch?v=9Fj4Z4ITexI">ザムザ</a><br/>
+<a href="https://www.youtube.com/watch?v=FNesli41eKQ">ザムザ</a><br/>
 さよならメモリーズ<br/>
 サリシノハラ<br/>
 <a href="https://www.youtube.com/watch?v=eJj0PdgoY98">ザルバラ</a><br/>
@@ -286,6 +288,7 @@ siGrE<br/>
 ジャバヲッキー・ジャバヲッカ<br/>
 <a href="https://www.youtube.com/watch?v=sJRRLbBeSiY">終点</a><br/>
 <a href="https://www.youtube.com/watch?v=dc3oKBMJy4Q">終点の先が在るとするならば。<br/>
+<a href="https://www.youtube.com/watch?v=nFHSSgZZBwM">終末じゃない</a><br/>
 <a href="https://soundcloud.com/nullificated005/sugasong">シュガーソングとビターステップ<br/>
 <a href="https://www.youtube.com/watch?v=c9LpaJWH6iQ">粛清マーチ</a><br/>
 <a href="https://www.youtube.com/watch?v=JMcCrlFaWF4">祝福のメシアとアイの塔</a><br/>
@@ -335,6 +338,7 @@ siGrE<br/>
 相愛性理論<br/>
 <a href="https://www.youtube.com/watch?v=vfljO3qjiNo">相対の門</a><br/>
 <a href="https://www.youtube.com/watch?v=WZhkjaPvJXY">それがあなたの幸せとしても</a><br/>
+<a href="https://www.youtube.com/watch?v=jhmEi546C0U">それでも僕らは歌うことをやめない</a><br/>
 <a href="https://www.youtube.com/watch?v=GeynpjEz8To">ゾンビ</a><br/>
         <br/>
         <br/>
@@ -384,6 +388,7 @@ siGrE<br/>
 テロル<br/>
 <a href="https://www.youtube.com/watch?v=bh7egL__fTc">天樂</a><br/>
 <a href="https://www.youtube.com/watch?v=_WViWidQhDM">天使のクローバー</a><br/>
+<a href="https://www.youtube.com/watch?v=Enji6YVFCDY">転生林檎</a><br/>
         <br/>
         <br/>
 <h3>と</h3><br/>
@@ -450,6 +455,8 @@ siGrE<br/>
 敗北の少年<br/>
 <a href="https://www.youtube.com/watch?v=DdYIhkrpYDo">はぐ</a><br/>
 <a href="https://www.youtube.com/watch?v=yC_iEV1YW8k">バグ</a><br/>
+<a href="https://www.youtube.com/watch?v=jeRvHZ3iyJY">化けの花</a><br/>
+<a href="https://www.youtube.com/watch?v=3iEskPU-WEo">箱庭のコラル</a><br/>
 <a href="https://www.youtube.com/watch?v=QbNEEw_VhEM">走れ太宰</a><br/>
 <a href="https://www.youtube.com/watch?v=Y4qYwh304v0">ハジメテノオト</a><br/>
 初めての恋が終わる時<br/>
@@ -491,6 +498,7 @@ Hello､ 星を数えて<br/>
 ファティマ<br/>
 <a href="https://www.youtube.com/watch?v=NirA6KWIGrg">フェレス</a><br/>
 <a href="https://www.youtube.com/watch?v=gRHO14O3ZY4">フォニイ</a><br/>
+<a href="https://www.youtube.com/watch?v=gJ-p1tGcrjA">不気味</a><br/>
 双色<br/>
 フタリボシ<br/>
 プライド革命<br/>
@@ -521,6 +529,7 @@ Hello､ 星を数えて<br/>
 <a href="https://soundcloud.com/ramlirise/boku-boku">Boku-boku β</a><br/>
 僕たちはひとつの光<br/>
 <a href="https://www.youtube.com/watch?v=EFKLIBTqvL4">ぼくらの16bit戦争</a><br/>
+<a href="https://www.youtube.com/watch?v=rlGEg5PnLFk">星空のメロディー</a><br/>
 ホシトハナ<br/>
 <a href="https://www.youtube.com/watch?v=3VBLb2B-g_U">星を渡る鳥</a><br/>
 <a href="https://www.youtube.com/watch?v=rkPTySupvCg">ボッカデラベリタ</a><br/>
@@ -602,6 +611,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 <br/>
 夜明けと蛍<br/>
 <a href="https://www.youtube.com/watch?v=9_1dkbzysS8">酔いどれ知らず</a><br/>
+<a href="https://www.youtube.com/watch?v=SWLj83C-W8A">余花にみとれて</a><br/>
 <a href="https://www.youtube.com/watch?v=WDf0idwv7N4">よくばり</a><br/>
 吉原ラメント<br/>
 夜咄ディセイブ<br/>
@@ -646,7 +656,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
         <br/>
         <br/>
 <h3>ろ</h3><br/>
-<a href="https://www.youtube.com/watch?v=OF_GmQ4uTz4">ロウワー</a><br/>
+<a href="https://www.youtube.com/watch?v=5vQei6XhagQ">ロウワー</a><br/>
 <a href="https://soundcloud.com/not-sotomine/rolling-girl">ローリンガール</a><br/>
 ロキ<br/>
 六兆年と一夜物語<br/>
@@ -673,7 +683,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 <a href="https://youtu.be/8kRCjrKjkRs">1000年生きてる</a><br/>
 1/6 -out of the gravity-<br/>
 13's memory<br/>
-1925<br/>
+<a href="https://www.youtube.com/watch?v=hv9ohMyeqL8">1925</a><br/>
 49懺悔録<br/>
 <a href="https://soundcloud.com/not-sotomine/6900000000a">6900000000</a><br/>
 <a href="https://www.youtube.com/watch?v=aFAlUHqxCqI">8番出口</a><br/>
@@ -806,6 +816,7 @@ WORLD'S END UMBRELLA<br/>
 <a href="https://www.youtube.com/watch?v=DaHnkN7a3yM">world.execute(me);</a><br/>
 World-line<br/>
 world.search(you);<br/>
+<a href="https://www.youtube.com/watch?v=zVzksM9G9tU">Worlders</a><br/>
 <a href="https://www.youtube.com/watch?v=bg07E08YCbg">you</a><br/>
 <a href="https://www.youtube.com/watch?v=9P97CpyhN6M">your℃</a><br/>
 <a href="https://www.youtube.com/watch?v=ZpNaXAnepNI">Your reality</a><br/>
