--- a/SVkHPHfDxRE.html
+++ b/SVkHPHfDxRE.html
@@ -6,6 +6,6 @@
     <title>譛?謔ｪ縺ｮ轣ｽ蜴?</title>
 </head>
 <body>
-    <img src="Image/SVkHPHfDxRE.png" alt="今日も明日も高い高い何処かしらで世界の内側を観て廻る。深淵がお前を覗く前から深淵は向こうからお前を観ていた。">
+    <img src="image/SVkHPHfDxRE.png" alt="今日も明日も高い高い何処かしらで世界の内側を観て廻る。深淵がお前を覗く前から深淵は向こうからお前を観ていた。">
 </body>
 </html>
