--- a/main.html
+++ b/main.html
@@ -58,18 +58,16 @@
           };
 
           let keyword = document.getElementById("searchInput").value.trim();
-          if (pages[keyword]) {
-              window.location.href = pages[keyword];
-          } else {
-              window.location.href = "notfound.html";
-          }
-      }
+             if (keyword) {
+        window.location.href = `search.html?q=${encodeURIComponent(keyword)}`;
+    }
+}
 
-      function enterkeySearch(event) {
-          if (event.key === "Enter") {
-              searchPage();
-          }
-      }
+function enterkeySearch(event) {
+    if (event.key === "Enter") {
+        searchPage();
+    }
+}
     </script>
   </body>
 </html>
