--- a/search.html
+++ b/search.html
@@ -9,7 +9,9 @@
 <body>
     <header>
         <h1>検索結果</h1>
-    </header>
+</header>
+<nav>
+    <ul>
     <main>
         <div id="search-results">
             <p>検索中...</p>
@@ -55,5 +57,7 @@
 
         window.onload = displayResults;
     </script>
+</ul>
+</nav>
 </body>
 </html>
