--- a/utamihon.html
+++ b/utamihon.html
@@ -385,6 +385,7 @@ siGrE<br/>
 <a href="https://www.youtube.com/watch?v=ugWA3FvHA_I">テオ</a><br/>
 デビルじゃないもん<br/>
 <a href="https://www.youtube.com/watch?v=VosdCKZStlM">てらてら</a><br/>
+<a href="https://www.youtube.com/watch?v=BU3ksAg3ZiM">テレキャスタービーボーイ</a><br/>
 テロル<br/>
 <a href="https://www.youtube.com/watch?v=bh7egL__fTc">天樂</a><br/>
 <a href="https://www.youtube.com/watch?v=_WViWidQhDM">天使のクローバー</a><br/>
