--- a/20230210.html
+++ b/20230210.html
@@ -34,7 +34,7 @@
                 c++;
                 if (c > 100) c = 100;
                 var bar = "#".repeat(c / 5);
-                var text = `>アクセスが確認されました。接続します。<br>${bar} ${c}%`;
+                var text = `>該当しないアクセスが確認されました。接続します。<br>${bar} ${c}%`;
                 document.getElementById("progressbar").innerHTML = text;
 
                 if (c < 100) {
@@ -63,26 +63,30 @@
 
     // キーワード反応リスト
     var responses = {
-        "外峯零": "あ～歌の子。知ってるよ。この街の軸ってことくらいだけど",
+        "外峯零": "あ～歌の子。知ってるよ。この街の軸ってことくらいだけど。苗字はガイネで、名前はヌルなんだよ。変わってるよね？",
         "外側": "そっか、君って内側のひとだもんね",
         "人間": "此処にヒトはいないよ、元人間はいるけど",
         "行き方": "え～来ない方が良いと思うんだけどなあ",
         "世界": "世界と言っても色々だよ、本当に。",
         "内側": "内側は「人間が住んでる世界」を僕らのと混ざらない様に、言い分けてるだけだよ",
         "境界線": "あんまあやふやにならない方が絶対いいかな",
-        "誰": "僕？普通にこの街の住民だけど。名前はそっちの文字で書けないよ",
-        "元人間": "駅員さんと看護師さんかな？僕が知ってるのはそれくらいかな。他にいるかもしれないし、そこまでは流石にわかんないね",
-        "駅": "駅は安全だと思うな",
+        "誰": "僕？普通にこの街の住民だけど。名前はそっちの文字での書き方まだ教わってないんだ",
+        "元人間": "駅員さんと看護師さんかな？僕が知ってるのはそれくらい。他にいるかもしれないし、そこまでは流石にわかんないね",
+        "駅": "駅は安全だと思うよ",
+        "存在": "在ろうと思えば在る。無いと思えば無い。そんなとこかな、この街",
+        "死": "？？？？？？なにそれ？",
         "駅員": "駅員さんね、元人間と思えないくらい力持ち。普段は誰にも優しいんだけどね、そういうやつほどおっかないよ。片腕だけだからって見くびっちゃ駄目だ",
         "異世界": "君だって僕らからすれば異世界の者だよ？",
+        "看護師": "噂なんだけど、本当はあの子の兄かも知れないとか……外で偶にすれ違うんだけど、なんか、別に普通のひとだったよ",
         "言葉": "言葉が通じるのって幸せだよねえ",
-        "こん": "こんにちは！そこは昼かな？",
+        "おはよ": "おはよう！朝？それとも今起きた感じ？",
+        "こんに": "こんにちは！そこは昼かな？",
         "はじめまして": "あ！よかった！はじめまして！てかよく見つけたねこんなの！",
         "見えてる": "え、ホント！？じゃあそこの君はひとなんだね！",
         "赤": "なんだかなあ、空が急に赤く見える時って、あの子が視てるってことらしいよ",
         "熱的死": "死んだ宇宙はぐしゃぐしゃにしてゴミ箱に捨てるんだ",
         "空": "赤い時は気を付けなよ、冗談抜きで。普通なら平気だと思うけどさ、何回か見たんだよ。目が合って狂っちゃった内側のひと",
-        "歌": "よく歌うよね～あの子",
+        "歌": "よく歌うよね～あの子。でも結構散らばってるよ、色々。うまいこと探せたらいいね？",
         "時間": "15:30",
         "休み": "定休日は火曜日と水曜日だよ"
     };
