--- a/20230210.html
+++ b/20230210.html
@@ -50,7 +50,7 @@
 
         function chat2() {
             var chatlog = document.getElementById("chatlog");
-            chatlog.innerHTML += "<ins>　　　　:</ins>これマジでできてる？おーい？<br>";
+            chatlog.innerHTML += "<ins>Shirase:</ins>ちゃんと届いているかい？<br>";
         }
 
         function send() {
@@ -63,32 +63,38 @@
 
     // キーワード反応リスト
     var responses = {
-        "外峯零": "あ～歌の子。知ってるよ。この街の軸ってことくらいだけど。苗字はガイネで、名前はヌルなんだよ。変わってるよね？",
-        "外側": "そっか、君って内側のひとだもんね",
-        "人間": "此処にヒトはいないよ、元人間はいるけど",
+        "外峯零": "歌の子。知ってるよ。この街の軸ってことくらいだけど。苗字はガイネで、名前はヌルなんだよ。変わってるよね？",
+        "外側": "そっか、君は内側のひとなんだね",
+        "人間": "どこからどこまでが「人間」かなんて、結構あやふやだと思わないかい？まあ、此処にはいないよ。元人間はいるけど",
         "行き方": "え～来ない方が良いと思うんだけどなあ",
-        "世界": "世界と言っても色々だよ、本当に。",
+        "世界": "世界と言っても色々だよ、本当に",
         "内側": "内側は「人間が住んでる世界」を僕らのと混ざらない様に、言い分けてるだけだよ",
         "境界線": "あんまあやふやにならない方が絶対いいかな",
-        "誰": "僕？普通にこの街の住民だけど。名前はそっちの文字での書き方まだ教わってないんだ",
-        "元人間": "駅員さんと看護師さんかな？僕が知ってるのはそれくらい。他にいるかもしれないし、そこまでは流石にわかんないね",
-        "駅": "駅は安全だと思うよ",
-        "存在": "在ろうと思えば在る。無いと思えば無い。そんなとこかな、この街",
-        "死": "？？？？？？なにそれ？",
-        "駅員": "駅員さんね、元人間と思えないくらい力持ち。普段は誰にも優しいんだけどね、そういうやつほどおっかないよ。片腕だけだからって見くびっちゃ駄目だ",
+        "読": "文字は「読む」ことで形を持つ。逆に言えば、読まれないものは存在しないのかもね",
+        "誰": "答えることができるのは、君が答えを求めているときだけなんだ。だから、今はただの「僕」に過ぎないよ。君次第で答えが変わるかもしれない",
+        "元人間": "駅員さんと看護師さんかな？僕が知ってるのはそれくらい。他にいるかもしれないし、そこまでは流石にわからないね",
+        "駅": "駅は比較的安全だよ。あくまで「比較的」だけど",
+        "存在": "在ろうと思えば在る。無いと思えば無い。そんなところかな、この街は。存在するって、案外曖昧なものだよ",
+        "死": "知らない方がいいこともあるよ",
+        "駅員": "駅員さんか。「そこにいるべきもの」だよ。だから安心していい、たぶん",
         "異世界": "君だって僕らからすれば異世界の者だよ？",
-        "看護師": "噂なんだけど、本当はあの子の兄かも知れないとか……外で偶にすれ違うんだけど、なんか、別に普通のひとだったよ",
+        "看護師": "彼は内側と外側の境目に立ってたんだ",
         "言葉": "言葉が通じるのって幸せだよねえ",
-        "おはよ": "おはよう！朝？それとも今起きた感じ？",
-        "こんに": "こんにちは！そこは昼かな？",
-        "はじめまして": "あ！よかった！はじめまして！てかよく見つけたねこんなの！",
-        "見えてる": "え、ホント！？じゃあそこの君はひとなんだね！",
-        "赤": "なんだかなあ、空が急に赤く見える時って、あの子が視てるってことらしいよ",
-        "熱的死": "死んだ宇宙はぐしゃぐしゃにしてゴミ箱に捨てるんだ",
-        "空": "赤い時は気を付けなよ、冗談抜きで。普通なら平気だと思うけどさ、何回か見たんだよ。目が合って狂っちゃった内側のひと",
-        "歌": "よく歌うよね～あの子。でも結構散らばってるよ、色々。うまいこと探せたらいいね？",
+        "おはよ": "おはよう。もう朝かい？それとも今起きた感じ？",
+        "こんに": "こんにちは。そこは昼かな？",
+        "はじめまして": "ああ、はじめまして。君がここに来るのは、必然だったのかもね",
+        "見えてる": "うん、ちゃんと見えてるならよかった。見えてないふりをすることもできるのにね",
+        "赤": "空が赤い時は、あの子が視てるらしいよ。見返さないほうがいい",
+        "熱的死": "死んだ宇宙はぐしゃぐしゃにして捨てる。どうせ誰も拾わないし、拾えないしね",
+        "空": "空が赤い時は気をつけなよ。本気で。何回も見たんだ、目が合っただけで狂った内側の人を",
+        "情報": "かなり散らばっている様子だよ。拾うかどうかは君次第だ",
+        "歌": "歌は記憶をつなぐ。時間すら超えてね",
         "時間": "15:30",
-        "休み": "定休日は火曜日と水曜日だよ"
+        "時": "此処だと時間なんてちょっとした目安に過ぎない",
+        "書": "書くことで、君は何かを「固定」している",
+        "休み": "定休日は火曜日と水曜日だよ",
+        "怪異": "どこにでもあるよ。認識しないだけでね",
+        "SCP": "うちとは関係ない。まあ、観測はしてるけど"
     };
 
     // メッセージに反応するかチェック
@@ -96,7 +102,7 @@
     Object.keys(responses).forEach(keyword => {
         if (message.includes(keyword)) {
             setTimeout(() => {
-                chatlog.innerHTML += `<ins>　　　　:</ins> ${responses[keyword]}<br>`;
+                chatlog.innerHTML += `<ins>Shirase:</ins> ${responses[keyword]}<br>`;
             }, 1000);
             responseFound = true;
         }
@@ -105,17 +111,17 @@
     // 何もヒットしなかった場合のランダム応答
     if (!responseFound) {
         var randomReplies = [
-            "僕も知らないよ",
-            "何の話？",
-            "ちょっとわからないなあ",
-            "なんて？",
+            "君、それ、どこで聞いたんだい？知ってることが混じってる",
+            "いい質問だ。でも答えはないよ",
+            "君がそれをどう解釈するか、見ものだ",
+            "不確かなものに手を出しても大丈夫かい？",
             "e78fbee59ca8e9968be799bae4b8ade381a7e38199e38082e3818ae5958fe38184e59088e3828fe3819be381afe79bb4e68ea5e3818ae9a198e38184e887b4e38197e381bee38199e38082",
             "縺ｾ縺?遲斐∴縺檎畑諢上＆繧後※縺?∪縺帙ｓ",
            "e381bee381a0e7ad94e38188e3818ce794a8e6848fe38195e3828ce381a6e38184e381bee3819be38293e38081e38197e381b0e38289e3818fe3818ae5be85e381a1e3818fe381a0e38195e38184e381bee3819be38082"
         ];
         var randomReply = randomReplies[Math.floor(Math.random() * randomReplies.length)];
         setTimeout(() => {
-            chatlog.innerHTML += `<ins>　　　　:</ins> ${randomReply}<br>`;
+            chatlog.innerHTML += `<ins>Shirase:</ins> ${randomReply}<br>`;
         }, 1000);
     }
 
