--- a/20230210.html
+++ b/20230210.html
@@ -63,7 +63,7 @@
 
     // キーワード反応リスト
     var responses = {
-        "外峯零": "歌の子。知ってるよ。この街の軸ってことくらいだけど。苗字はガイネで、名前はヌルなんだよ。変わってるよね？",
+        "外峯零": "この街の軸。いつだって境目を歩いている、白いモノ。苗字はガイネで、名前はヌルだ",
         "外側": "そっか、君は内側のひとなんだね",
         "人間": "どこからどこまでが「人間」かなんて、結構あやふやだと思わないかい？まあ、此処にはいないよ。元人間はいるけど",
         "行き方": "え～来ない方が良いと思うんだけどなあ",
