--- a/20230210.html
+++ b/20230210.html
@@ -66,20 +66,20 @@
         "外峯零": "この街の軸。いつだって境目を歩いている、白いモノ。苗字はガイネで、名前はヌルだ",
         "外側": "そっか、君は内側のひとなんだね",
         "人間": "どこからどこまでが「人間」かなんて、結構あやふやだと思わないかい？まあ、此処にはいないよ。元人間はいるけど",
-        "行き方": "え～来ない方が良いと思うんだけどなあ",
+        "行き方": "来ない方が良いと思うんだけどなあ",
         "世界": "世界と言っても色々だよ、本当に",
-        "内側": "内側は「人間が住んでる世界」を僕らのと混ざらない様に、言い分けてるだけだよ",
-        "境界線": "あんまあやふやにならない方が絶対いいかな",
+        "内側": "内側は「人間が住んでる世界」を僕らのと混ざらない様に、言い分けてるだけさ",
+        "境界線": "あやふやにならない方が絶対いい",
         "読": "文字は「読む」ことで形を持つ。逆に言えば、読まれないものは存在しないのかもね",
         "誰": "答えることができるのは、君が答えを求めているときだけなんだ。だから、今はただの「僕」に過ぎないよ。君次第で答えが変わるかもしれない",
         "元人間": "駅員さんと看護師さんかな？僕が知ってるのはそれくらい。他にいるかもしれないし、そこまでは流石にわからないね",
         "駅": "駅は比較的安全だよ。あくまで「比較的」だけど",
-        "存在": "在ろうと思えば在る。無いと思えば無い。そんなところかな、この街は。存在するって、案外曖昧なものだよ",
+        "存在": "在ろうと思えば在る。無いと思えば無い。そんなところかな、この街は。存在するって、案外曖昧なものさ",
         "死": "知らない方がいいこともあるよ",
         "駅員": "駅員さんか。「そこにいるべきもの」だよ。だから安心していい、たぶん",
         "異世界": "君だって僕らからすれば異世界の者だよ？",
-        "看護師": "彼は内側と外側の境目に立ってたんだ",
-        "言葉": "言葉が通じるのって幸せだよねえ",
+        "看護師": "彼は内側と外側の境目に立っていたんだ",
+        "言葉": "言葉が通じるのってありがたいことだね、通じるからこそ怖くもあるけども",
         "おはよ": "おはよう。もう朝かい？それとも今起きた感じ？",
         "こんに": "こんにちは。そこは昼かな？",
         "はじめまして": "ああ、はじめまして。君がここに来るのは、必然だったのかもね",
