--- a/20230210.html
+++ b/20230210.html
@@ -63,7 +63,7 @@
 
     // キーワード反応リスト
     var responses = {
-        "外峯零": "この街の軸。いつだって境目を歩いている、白いモノ。苗字はガイネで、名前はヌルだ",
+        "外峯零": "この街の軸。いつだって境目を歩いている、白いモノ。苗字はガイネで、名前はヌルだ。生きてる証明を、面白がってくれるやつだよ",
         "外側": "そっか、君は内側のひとなんだね",
         "人間": "どこからどこまでが「人間」かなんて、結構あやふやだと思わないかい？まあ、此処にはいないよ。元人間はいるけど",
         "行き方": "来ない方が良いと思うんだけどなあ",
@@ -94,7 +94,19 @@
         "書": "書くことで、君は何かを「固定」している",
         "休み": "定休日は火曜日と水曜日だよ",
         "怪異": "どこにでもあるよ。認識しないだけでね",
-        "SCP": "うちとは関係ない。まあ、観測はしてるけど"
+        "SCP": "うちとは関係ない。まあ、観測はしてるけど",
+        "しらせ": "俺が知ってるしらせが君の知ってるしらせとは限らない",
+"記憶": "時間の中に置き去りにされた、忘れられないもの",
+"忘": "忘れることと、忘れられることは違うんだよ",
+"曖昧だ": "境界線なんて、引く側の気分次第だからな",
+"0": "何もないことと、始まりであることは、同じだと思うか？",
+"街": "知ってるか？「外」ってのは、思ってるよりずっと広い",
+"蚊帳の外": "見えていないのか、見ていないのか。どっちだろうな",
+"髪": "長さや色に意味を持たせたがるのは、人間の癖だよな",
+"神": "呼び名をつけただけで、理解した気になれるんだから、すごいよな。人間",
+"概念": "名前をつけた時点で、それはもう別物になってる",
+"時代": "流れているんじゃない、積み重なっているんだよ",
+        "箱": "どれが本物かなんて、最初から決まってないよ"
     };
 
     // メッセージに反応するかチェック
