--- a/redeyes.html
+++ b/redeyes.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>観てるよ</title>
+        <title>襍､縺?楜</title>
         <meta name="contained" content="noindex">
 <body style="font-family: monospace;">
    <div id="div1">
@@ -15,16 +15,16 @@
 
     <div id="innerdiv">
 ================================================================================<br>
-2023年8月14日 00:23:01　　　　　　　　　　　　　　　　　　　　　  作成　外峯 零<br>
+2025年2月30日 23:10:51　　　　　　　　　　　　　　　　　　　　　  作成　外峯 零<br>
 ================================================================================<br>
-廃墟暮らしの頃は覚えてるだけ無駄らしい？<br>
+荒ら屋暮らしの頃は覚えてるだけ無駄らしい？<br>
 それってさ、ちょっと酷い話だと思わないこと？<br>
 ずっとお世話になった荒ら屋も可哀想だし。<br>
-其処で過ごした時間も無駄ではないし。<br>
+其処で過ごした時間は無駄じゃなかったし。<br>
 私に『廃墟の歌姫』という渾名が付いたのも此処のお陰だし。<br>
-もう私同様、存在しない場所になってしまったけどね。<br>
-江縫栄に来てから偶に訪ねたりするの。<br>
-ここは存在しなくなったモノが集まる街だから。<br>
+まあもう私同様、存在しない場所になってしまったけどね。<br>
+この街に来てから偶に訪ねたりするの。<br>
+だって此処は、存在しなくなったモノが集まる街だから。<br>
 市街というか、死骸ね。<br>
 長い間の記憶は残念ながら無いけど、私を構成するにあたって、<br>
 私の廃墟がすこぶる影響を与えたのは間違いなく事実です。<br>
